syntax = "proto3";
package pstore;

import "delta/delta.proto";
import "google/protobuf/any.proto";

option go_package = "github.com/dave/protod/pstore;pstore";

message Payload {
  message Add {
    message Request {
      string documentType = 1;
      string documentId = 2;
      google.protobuf.Any value = 3;
    }
  }
  message Get {
    message Request {
      string documentType = 1;
      string documentId = 2;
    }
    message Response {
      int64 state = 1;
      google.protobuf.Any value = 2;
    }
  }
  message Edit {
    message Request {
      string documentType = 1;
      string documentId = 2;
      string stateId = 3;
      int64 state = 4; // state of the document that this op is acting on
      delta.Op op = 5; // operation
    }
    message Response {
      int64 state = 1; // state of the document after the op from the client and the response op have been applied
      delta.Op op = 2; // response op that must be applied to the document in order to get to the server state
    }
  }
  message Refresh {
    message Request {
      string documentType = 1; // document type
      string documentId = 2;   // document id
    }
  }
}